--- a/slides/mass_notes.html
+++ b/slides/mass_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org5b8cd93">
-<h2 id="org5b8cd93">Navigation instructions</h2>
+<section id="slide-org5e3da45">
+<h2 id="org5e3da45">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -74,18 +74,16 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org29dfde1" data-audio-src="mass/title.ogg">
-<h2 id="org29dfde1">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org5de3d70" data-audio-src="mass/title.ogg">
+<h2 id="org5de3d70">CP213: Applied mathematics and problem solving</h2>
 <h2>Mass and species balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
-
-<button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
 
 </section>
 </section>
 <section>
-<section id="slide-orgeaf8e45">
-<h2 id="orgeaf8e45">Overview</h2>
+<section id="slide-orgdf737f3">
+<h2 id="orgdf737f3">Overview</h2>
 <ul>
 <li>Mass balances
 <ul>
@@ -119,8 +117,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-org809b723">
-<h2 id="org809b723">Balance equation for mass</h2>
+<section id="slide-orge6c8a27">
+<h2 id="orge6c8a27">Balance equation for mass</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -146,8 +144,10 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-orgc6c8b8e">
-<h2 id="orgc6c8b8e">Tank filling</h2>
+<section id="slide-orgd8d0a0a">
+<h2 id="orgd8d0a0a">Tank filling</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31780&amp;code=cU~6oOEiuxAWo6tgmFvMmWtevk8Ivfq" frameborder="0" allowfullscreen></iframe>
+
 <aside class="notes">
 <p>
 Consider filling a tank with water at an unknown volumetric flow rate
@@ -184,13 +184,11 @@ V &= A h
 </section>
 </section>
 <section>
-<section id="slide-org848de07">
-<h2 id="org848de07">Variable cross-sectional area</h2>
-</section>
-</section>
-<section>
-<section id="slide-org4b1b3b4">
-<h2 id="org4b1b3b4">Determining the water level</h2>
+<section id="slide-org8c5dcea">
+<h2 id="org8c5dcea">Determining the water level</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31782&amp;code=dc~RhO0cfdOFdQ2NegoRWjEGoyHrQ70" frameborder="0" allowfullscreen></iframe>
+
+
 <aside class="notes">
 <p>
 
@@ -255,8 +253,22 @@ The rate of
 </section>
 </section>
 <section>
-<section id="slide-org5a43759">
-<h2 id="org5a43759">Gravity drainage</h2>
+<section id="slide-org0cb37e7">
+<h2 id="org0cb37e7">Variable cross-sectional area</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31784&amp;code=d5~ikL9hWEKwBJOG0Gm7MFXxY9UBMqa" frameborder="0" allowfullscreen></iframe>
+
+</section>
+</section>
+<section>
+<section id="slide-org8e83295">
+<h2 id="org8e83295">Solving the differential equation</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31790&amp;code=cV~ycd4TFIYtdR4EieQSVoVRG8urLH6" frameborder="0" allowfullscreen></iframe>
+
+</section>
+</section>
+<section>
+<section id="slide-org93074f4">
+<h2 id="org93074f4">Gravity drainage</h2>
 <aside class="notes">
 <p>
 The first example that we will work through is tank drainage.  
@@ -271,15 +283,15 @@ As you will find out in fluid flow and in
 </section>
 </section>
 <section>
-<section id="slide-org133d7d4">
-<h2 id="org133d7d4">Combining draining and filling</h2>
+<section id="slide-org037489a">
+<h2 id="org037489a">Combining draining and filling</h2>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org8fdcc43">
-<h2 id="org8fdcc43">Velocity and volumetric flowrate</h2>
+<section id="slide-org3345c87">
+<h2 id="org3345c87">Velocity and volumetric flowrate</h2>
 <aside class="notes">
 <p>
 
@@ -306,8 +318,8 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-org9945b24">
-<h2 id="org9945b24">Balance equation: Species \(A\)</h2>
+<section id="slide-org602555a">
+<h2 id="org602555a">Balance equation: Species \(A\)</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -336,14 +348,14 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-orgdfad447">
-<h2 id="orgdfad447">Species balance: Batch distillation</h2>
+<section id="slide-org03887a2">
+<h2 id="org03887a2">Species balance: Batch distillation</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org4bc734c">
-<h2 id="org4bc734c">Summary</h2>
+<section id="slide-orga8a2102">
+<h2 id="orga8a2102">Summary</h2>
 <ul>
 <li>Balance equation</li>
 
