--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org555fcf4">
-<h2 id="org555fcf4">Navigation instructions</h2>
+<section id="slide-orgc5a8305">
+<h2 id="orgc5a8305">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org405457c" data-audio-src="python/title.ogg">
-<h2 id="org405457c">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org3344c64" data-audio-src="python/title.ogg">
+<h2 id="org3344c64">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -101,8 +101,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-org9dff06b" data-audio-src="python/">
-<h2 id="org9dff06b">Overview</h2>
+<section id="slide-org7c6f9e6" data-audio-src="python/">
+<h2 id="org7c6f9e6">Overview</h2>
 <ul>
 <li>Jupyter notebooks</li>
 <li>Basic elements of Python</li>
@@ -152,8 +152,8 @@ of Python to as far you want to go.
 </section>
 </section>
 <section>
-<section id="slide-org2a9cef2">
-<h2 id="org2a9cef2">Jupyter notebooks</h2>
+<section id="slide-orgfd67cc2">
+<h2 id="orgfd67cc2">Jupyter notebooks</h2>
 <ul>
 <li>Binder</li>
 <li>Google Colab</li>
@@ -183,8 +183,8 @@ mybinder.org, and the second method is with Google Colab.
 </section>
 </section>
 <section>
-<section id="slide-orgf3f502a">
-<h2 id="orgf3f502a">binder</h2>
+<section id="slide-org7ab55a0">
+<h2 id="org7ab55a0">binder</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29814&amp;code=d3~fUfZO0i6BIXbLrG8LPTO8TxihQo0" frameborder="0" allowfullscreen></iframe>
 
 
@@ -195,8 +195,8 @@ To follow along, open the Jupyter notebook: <a href="https://mybinder.org/v2/gh/
 </section>
 </section>
 <section>
-<section id="slide-orgea72af0">
-<h2 id="orgea72af0">Google Colab</h2>
+<section id="slide-org646ebce">
+<h2 id="org646ebce">Google Colab</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29815&amp;code=dd~rQcuNtpfbWJpjOH07dDfsrn3beyJ" frameborder="0" allowfullscreen></iframe>
 
 
@@ -207,8 +207,8 @@ To follow along, open the Jupyter notebook: <a href="https://colab.research.goog
 </section>
 </section>
 <section>
-<section id="slide-orgbda6675">
-<h2 id="orgbda6675">Python as a calculator</h2>
+<section id="slide-org999e7f4">
+<h2 id="org999e7f4">Python as a calculator</h2>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -225,8 +225,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org576469f">
-<h2 id="org576469f">Example using variables</h2>
+<section id="slide-org8cfe055">
+<h2 id="org8cfe055">Example using variables</h2>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -243,15 +243,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-orgf595499">
-<h2 id="orgf595499">Variables: Numbers and strings</h2>
+<section id="slide-org031493e">
+<h2 id="org031493e">Variables: Numbers and strings</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orgc6102bc">
-<h2 id="orgc6102bc">Variables: Lists</h2>
+<section id="slide-orgbe0e9fe">
+<h2 id="orgbe0e9fe">Variables: Lists</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -261,8 +261,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org14b464d">
-<h2 id="org14b464d">Variables: Dictionaries</h2>
+<section id="slide-orgc828948">
+<h2 id="orgc828948">Variables: Dictionaries</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
@@ -270,8 +270,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org070afc8">
-<h2 id="org070afc8">Example using dictionaries</h2>
+<section id="slide-org8a047d1">
+<h2 id="org8a047d1">Example using dictionaries</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -281,15 +281,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-orgdc59f09">
-<h2 id="orgdc59f09">More advanced use of dictionaries</h2>
+<section id="slide-org74c2bee">
+<h2 id="org74c2bee">More advanced use of dictionaries</h2>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31008&amp;code=cT~vNz0yrmdyodcJPeOFPCWsuvO7OEQ" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-orge19b219">
-<h2 id="orge19b219">Functions</h2>
+<section id="slide-org3c4af1f">
+<h2 id="org3c4af1f">Functions</h2>
 
 
 <p>
@@ -299,8 +299,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-orgb9c980d">
-<h2 id="orgb9c980d">Conditionals</h2>
+<section id="slide-orgab0ab34">
+<h2 id="orgab0ab34">Conditionals</h2>
 
 
 <p>
@@ -310,8 +310,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-orgb00cfea">
-<h2 id="orgb00cfea">Importing libraries</h2>
+<section id="slide-orgf94496a">
+<h2 id="orgf94496a">Importing libraries</h2>
 <ul>
 <li>Numpy</li>
 <li>Matplotlib</li>
@@ -356,8 +356,8 @@ module, and that you will find extremely useful, include:
 </section>
 </section>
 <section>
-<section id="slide-org17c6124">
-<h2 id="org17c6124">importing numpy</h2>
+<section id="slide-org5b42a2f">
+<h2 id="org5b42a2f">importing numpy</h2>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -399,8 +399,8 @@ case, we can call a specific function within
 </section>
 </section>
 <section>
-<section id="slide-org019ce1b">
-<h2 id="org019ce1b">numpy</h2>
+<section id="slide-org864e499">
+<h2 id="org864e499">numpy</h2>
 <ul>
 <li>mathematical functions
 <ul>
@@ -434,8 +434,8 @@ from Python.  For example, if you want to take the sine of a
 </section>
 </section>
 <section>
-<section id="slide-org338a1f6">
-<h2 id="org338a1f6">matplotlib / pylab</h2>
+<section id="slide-orga721d15">
+<h2 id="orga721d15">matplotlib / pylab</h2>
 <ul>
 <li>Basic introduction: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_plotting.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_plotting.ipynb">colab</a></li>
 <li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
@@ -487,8 +487,8 @@ plots.
 </section>
 </section>
 <section>
-<section id="slide-orgc179298">
-<h2 id="orgc179298">Scipy</h2>
+<section id="slide-orgd878c76">
+<h2 id="orgd878c76">Scipy</h2>
 <ul>
 <li>non-linear equation solver: <code>fsolve</code> (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_solver.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_solver.ipynb">colab</a>)</li>
 <li>numerical integration: <code>quad</code></li>
@@ -499,8 +499,8 @@ plots.
 </section>
 </section>
 <section>
-<section id="slide-orga0ec20f">
-<h2 id="orga0ec20f">Examples of using <code>fsolve</code></h2>
+<section id="slide-org59919fd">
+<h2 id="org59919fd">Examples of using <code>fsolve</code></h2>
 <ul>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1, alternate solution (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
@@ -520,8 +520,8 @@ plots.
 </section>
 </section>
 <section>
-<section id="slide-org91a750e">
-<h2 id="org91a750e">Sympy</h2>
+<section id="slide-org2e00b06">
+<h2 id="org2e00b06">Sympy</h2>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -541,8 +541,8 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org029e411">
-<h2 id="org029e411">Installation</h2>
+<section id="slide-org50d64bb">
+<h2 id="org50d64bb">Installation</h2>
 <p>
 If you are interested in installing Python directly on your computer,
 you can try using <a href="https://www.anaconda.com/products/individual">ANACONDA</a>, which is a freely available distribution.
@@ -569,8 +569,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-org16e6f93">
-<h2 id="org16e6f93">Summary</h2>
+<section id="slide-org317e799">
+<h2 id="org317e799">Summary</h2>
 <aside class="notes">
 nil
 </aside>
