--- a/slides/index.html
+++ b/slides/index.html
@@ -47,12 +47,12 @@
 
 
 <section>
-<section id="slide-org4d81edd">
-<h2 id="org4d81edd">CP213: Applied Mathematics and Problem Solving</h2>
+<section id="slide-org2121e94">
+<h2 id="org2121e94">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace site</a></li>
 <li>Week 0: <a href="./intro_notes-2020.html">Module overview</a></li>
-<li>Week 1: <a href="./python_notes.html">Introduction to Python</a> / Tutorial: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb">binder</a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb">colab</a></li>
+<li>Weeks 1-2: <a href="./python_notes.html">Introduction to Python</a> / Tutorial: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb">binder</a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb">colab</a></li>
 <li>Weeks 2-4: Differential balances</li>
 <li>Weeks 5-8: Ordinary differential equations</li>
 <li>Weeks 9-10: Multivariate calculus</li>
@@ -63,19 +63,44 @@
 </section>
 </section>
 <section>
-<section id="slide-orgdd5049d">
-<h2 id="orgdd5049d">Introduction to Python</h2>
+<section id="slide-org8a0c3b4">
+<h2 id="org8a0c3b4">Introduction to Python</h2>
 <p>
 Week 1
 </p>
 
 <ul>
 <li>For lecture materials, click <a href="./python_notes.html">here</a>.</li>
-<li>For tutorial sheet, click <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb"><object type="image/svg+xml" data="https://mybinder.org/badge.svg" class="org-svg">
-Sorry, your browser does not support SVG.</object></a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb"><object type="image/svg+xml" data="https://colab.research.google.com/assets/colab-badge.svg" class="org-svg">
-Sorry, your browser does not support SVG.</object></a></li>
+<li>For tutorial sheet, click <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb">colab</a></li>
 
 </ul>
+
+</section>
+</section>
+<section>
+<section id="slide-orgcbfa9a4">
+<h2 id="orgcbfa9a4">Differential balances</h2>
+<p>
+Weeks 2-4
+</p>
+
+<ul>
+<li><a href="./mass_notes.html">Mass and species balances</a></li>
+<li><a href="./energy_notes.html">Energy balances</a></li>
+<li><a href="./momentum_notes.html">Momentum/force balances</a></li>
+
+</ul>
+
+
+</section>
+<section id="slide-org1c45074">
+<h3 id="org1c45074">Mass and species balances</h3>
+</section>
+<section id="slide-org7ca4044">
+<h3 id="org7ca4044">Energy balance</h3>
+</section>
+<section id="slide-orgfc0e0dd">
+<h3 id="orgfc0e0dd">Momentum and force balances</h3>
 </section>
 </section>
 </div>
