--- a/slides/index.html
+++ b/slides/index.html
@@ -47,15 +47,15 @@
 
 
 <section>
-<section id="slide-org2121e94">
-<h2 id="org2121e94">CP213: Applied Mathematics and Problem Solving</h2>
+<section id="slide-orgf5b059f">
+<h2 id="orgf5b059f">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace site</a></li>
 <li>Week 0: <a href="./intro_notes-2020.html">Module overview</a></li>
 <li>Weeks 1-2: <a href="./python_notes.html">Introduction to Python</a> / Tutorial: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb">binder</a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb">colab</a></li>
-<li>Weeks 2-4: Differential balances</li>
-<li>Weeks 5-8: Ordinary differential equations</li>
-<li>Weeks 9-10: Multivariate calculus</li>
+<li>Weeks 3-5: Differential balances</li>
+<li>Weeks 6-9: Ordinary differential equations</li>
+<li>Week 10: Multivariate calculus</li>
 
 </ul>
 
@@ -63,10 +63,10 @@
 </section>
 </section>
 <section>
-<section id="slide-org8a0c3b4">
-<h2 id="org8a0c3b4">Introduction to Python</h2>
+<section id="slide-org62969f3">
+<h2 id="org62969f3">Introduction to Python</h2>
 <p>
-Week 1
+Weeks 1-2
 </p>
 
 <ul>
@@ -78,10 +78,10 @@ Week 1
 </section>
 </section>
 <section>
-<section id="slide-orgcbfa9a4">
-<h2 id="orgcbfa9a4">Differential balances</h2>
+<section id="slide-orgd52cb43">
+<h2 id="orgd52cb43">Differential balances</h2>
 <p>
-Weeks 2-4
+Weeks 3-5
 </p>
 
 <ul>
@@ -93,14 +93,14 @@ Weeks 2-4
 
 
 </section>
-<section id="slide-org1c45074">
-<h3 id="org1c45074">Mass and species balances</h3>
+<section id="slide-org7512b3d">
+<h3 id="org7512b3d">Mass and species balances</h3>
 </section>
-<section id="slide-org7ca4044">
-<h3 id="org7ca4044">Energy balance</h3>
+<section id="slide-org7616aef">
+<h3 id="org7616aef">Energy balance</h3>
 </section>
-<section id="slide-orgfc0e0dd">
-<h3 id="orgfc0e0dd">Momentum and force balances</h3>
+<section id="slide-org14fdb07">
+<h3 id="org14fdb07">Momentum and force balances</h3>
 </section>
 </section>
 </div>
