--- a/slides/mass_notes.html
+++ b/slides/mass_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org5e3da45">
-<h2 id="org5e3da45">Navigation instructions</h2>
+<section id="slide-org991379d">
+<h2 id="org991379d">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -74,16 +74,16 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org5de3d70" data-audio-src="mass/title.ogg">
-<h2 id="org5de3d70">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgafc0bf3" data-audio-src="mass/title.ogg">
+<h2 id="orgafc0bf3">CP213: Applied mathematics and problem solving</h2>
 <h2>Mass and species balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-orgdf737f3">
-<h2 id="orgdf737f3">Overview</h2>
+<section id="slide-org24f1c48">
+<h2 id="org24f1c48">Overview</h2>
 <ul>
 <li>Mass balances
 <ul>
@@ -117,8 +117,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-orge6c8a27">
-<h2 id="orge6c8a27">Balance equation for mass</h2>
+<section id="slide-org1c55bfd">
+<h2 id="org1c55bfd">Balance equation for mass</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -144,8 +144,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-orgd8d0a0a">
-<h2 id="orgd8d0a0a">Tank filling</h2>
+<section id="slide-orgc9099b2">
+<h2 id="orgc9099b2">Tank filling</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31780&amp;code=cU~6oOEiuxAWo6tgmFvMmWtevk8Ivfq" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -184,8 +184,8 @@ V &= A h
 </section>
 </section>
 <section>
-<section id="slide-org8c5dcea">
-<h2 id="org8c5dcea">Determining the water level</h2>
+<section id="slide-orge078557">
+<h2 id="orge078557">Determining the water level</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31782&amp;code=dc~RhO0cfdOFdQ2NegoRWjEGoyHrQ70" frameborder="0" allowfullscreen></iframe>
 
 
@@ -253,22 +253,25 @@ The rate of
 </section>
 </section>
 <section>
-<section id="slide-org0cb37e7">
-<h2 id="org0cb37e7">Variable cross-sectional area</h2>
+<section id="slide-orgaa898ca">
+<h2 id="orgaa898ca">Variable cross-sectional area</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31784&amp;code=d5~ikL9hWEKwBJOG0Gm7MFXxY9UBMqa" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org8e83295">
-<h2 id="org8e83295">Solving the differential equation</h2>
+<section id="slide-org268f0af">
+<h2 id="org268f0af">Solving the differential equation</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31790&amp;code=cV~ycd4TFIYtdR4EieQSVoVRG8urLH6" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org93074f4">
-<h2 id="org93074f4">Gravity drainage</h2>
+<section id="slide-org578c31c">
+<h2 id="org578c31c">Gravity drainage</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31869&amp;code=dc~RhO0cidLFaQ5NigoRPjIGmyGrR72" frameborder="0" allowfullscreen></iframe>
+
+
 <aside class="notes">
 <p>
 The first example that we will work through is tank drainage.  
@@ -283,15 +286,15 @@ As you will find out in fluid flow and in
 </section>
 </section>
 <section>
-<section id="slide-org037489a">
-<h2 id="org037489a">Combining draining and filling</h2>
+<section id="slide-org1e6f5cf">
+<h2 id="org1e6f5cf">Combining draining and filling</h2>
 
 
 </section>
 </section>
 <section>
-<section id="slide-org3345c87">
-<h2 id="org3345c87">Velocity and volumetric flowrate</h2>
+<section id="slide-org6af1875">
+<h2 id="org6af1875">Velocity and volumetric flowrate</h2>
 <aside class="notes">
 <p>
 
@@ -318,8 +321,8 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-org602555a">
-<h2 id="org602555a">Balance equation: Species \(A\)</h2>
+<section id="slide-orge653b0a">
+<h2 id="orge653b0a">Balance equation: Species \(A\)</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -348,14 +351,14 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-org03887a2">
-<h2 id="org03887a2">Species balance: Batch distillation</h2>
+<section id="slide-org8779118">
+<h2 id="org8779118">Species balance: Batch distillation</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-orga8a2102">
-<h2 id="orga8a2102">Summary</h2>
+<section id="slide-org7b28afc">
+<h2 id="org7b28afc">Summary</h2>
 <ul>
 <li>Balance equation</li>
 
