--- a/slides/mass_notes.html
+++ b/slides/mass_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org991379d">
-<h2 id="org991379d">Navigation instructions</h2>
+<section id="slide-orgc61a2ec">
+<h2 id="orgc61a2ec">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -74,16 +74,16 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgafc0bf3" data-audio-src="mass/title.ogg">
-<h2 id="orgafc0bf3">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgcbdcdf1" data-audio-src="mass/title.ogg">
+<h2 id="orgcbdcdf1">CP213: Applied mathematics and problem solving</h2>
 <h2>Mass and species balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org24f1c48">
-<h2 id="org24f1c48">Overview</h2>
+<section id="slide-org1644ddd">
+<h2 id="org1644ddd">Overview</h2>
 <ul>
 <li>Mass balances
 <ul>
@@ -117,8 +117,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-org1c55bfd">
-<h2 id="org1c55bfd">Balance equation for mass</h2>
+<section id="slide-org8b542b5">
+<h2 id="org8b542b5">Balance equation for mass</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -144,8 +144,8 @@ differentiation and integration.
 </section>
 </section>
 <section>
-<section id="slide-orgc9099b2">
-<h2 id="orgc9099b2">Tank filling</h2>
+<section id="slide-orgb6ea115">
+<h2 id="orgb6ea115">Tank filling</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31780&amp;code=cU~6oOEiuxAWo6tgmFvMmWtevk8Ivfq" frameborder="0" allowfullscreen></iframe>
 
 <aside class="notes">
@@ -184,8 +184,8 @@ V &= A h
 </section>
 </section>
 <section>
-<section id="slide-orge078557">
-<h2 id="orge078557">Determining the water level</h2>
+<section id="slide-orgf3812fa">
+<h2 id="orgf3812fa">Determining the water level</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31782&amp;code=dc~RhO0cfdOFdQ2NegoRWjEGoyHrQ70" frameborder="0" allowfullscreen></iframe>
 
 
@@ -253,22 +253,22 @@ The rate of
 </section>
 </section>
 <section>
-<section id="slide-orgaa898ca">
-<h2 id="orgaa898ca">Variable cross-sectional area</h2>
+<section id="slide-orgb5ad45e">
+<h2 id="orgb5ad45e">Variable cross-sectional area</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31784&amp;code=d5~ikL9hWEKwBJOG0Gm7MFXxY9UBMqa" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org268f0af">
-<h2 id="org268f0af">Solving the differential equation</h2>
+<section id="slide-orgfcf77d6">
+<h2 id="orgfcf77d6">Solving the differential equation</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31790&amp;code=cV~ycd4TFIYtdR4EieQSVoVRG8urLH6" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org578c31c">
-<h2 id="org578c31c">Gravity drainage</h2>
+<section id="slide-org6c0f185">
+<h2 id="org6c0f185">Gravity drainage</h2>
 <iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31869&amp;code=dc~RhO0cidLFaQ5NigoRPjIGmyGrR72" frameborder="0" allowfullscreen></iframe>
 
 
@@ -286,23 +286,38 @@ As you will find out in fluid flow and in
 </section>
 </section>
 <section>
-<section id="slide-org1e6f5cf">
-<h2 id="org1e6f5cf">Combining draining and filling</h2>
-
+<section id="slide-org326ff26">
+<h2 id="org326ff26">Numerical solution of gravity drainage problem</h2>
+<iframe allow="autoplay; fullscreen" height="490" width="800" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=31901&amp;code=cD~cIPioCRimve8AQdiGXIcDIWQ7Rny" frameborder="0" allowfullscreen></iframe>
 
 </section>
 </section>
 <section>
-<section id="slide-org6af1875">
-<h2 id="org6af1875">Velocity and volumetric flowrate</h2>
+<section id="slide-org035b16e">
+<h2 id="org035b16e">Velocity and volumetric flowrate</h2>
 <aside class="notes">
 <p>
 
 </p>
 
 <p>
-In first year, you have seen the connection between the velocity of a
-fluid and the volumetric flow rate.  
+In this video, we will be looking at the connection between the
+velocity of a fluid and its volumetric flow rate.  In first year, you
+have seen this connection before; however, it was typically limited to
+the case where the velocity of the fluid was uniform.  In this video,
+we will be looking at the situation where the velocity of the fluid
+may vary with position.
+</p>
+
+<p>
+First, let's look at the case of flow through a pipe, where the
+velocity of the fluid constant with time and is the same across the
+cross section of the pipe.
+</p>
+
+<p>
+In the tank filling and drainage examples that we covered previously,
+performed mass balances in time
 </p>
 
 <p>
@@ -321,8 +336,8 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-orge653b0a">
-<h2 id="orge653b0a">Balance equation: Species \(A\)</h2>
+<section id="slide-org2c8d382">
+<h2 id="org2c8d382">Balance equation: Species \(A\)</h2>
 <div>
 \begin{align*}
 {\rm accumulation} 
@@ -351,14 +366,14 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-org8779118">
-<h2 id="org8779118">Species balance: Batch distillation</h2>
+<section id="slide-org83784f1">
+<h2 id="org83784f1">Species balance: Batch distillation</h2>
 
 </section>
 </section>
 <section>
-<section id="slide-org7b28afc">
-<h2 id="org7b28afc">Summary</h2>
+<section id="slide-org37ae19d">
+<h2 id="org37ae19d">Summary</h2>
 <ul>
 <li>Balance equation</li>
 
