--- a/slides/links.html
+++ b/slides/links.html
@@ -14,13 +14,13 @@
 
   <li class="slide-menu-item menu-section">Weeks 2-4: Differential balances</li>
   <li class="slide-menu-item">
-    <!---a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Mass and species balances</a>
+    <a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Mass and species balances</a>
   </li>
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/energy_notes.html">Energy balances</a>
   </li>
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Momentum/force balances</a--->
+    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Momentum/force balances</a>
   </li>
 
   <li class="slide-menu-item menu-section">Weeks 5-8: Ordinary differential equations</li>
